Custom "Delete Keyframes" shortcut still requires confirmation #70316

Closed
opened 2019-09-28 10:14:14 +02:00 by Ray · 28 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.43

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
action.delete shortcuts show confirmation prompts in the dopesheet just like wm.call_menu, despite being a single action.

As I never use the cleaning options that appear when pressing X to delete keyframes (wm.call_menu), I wanted to make a custom dopesheet shortcut for deleting keyframes (action.delete) that doesn't require an additional confirmation, (as is the case with the default wm.call_menu shortcut). So, I disabled the existing dopesheet delete shortcut and created a new one for action.delete. However, when using this new shortcut, a prompt still appears.

I'm reporting this as a bug rather than a feature request because the behavior seems inconsistent with other single option shortcuts and yields unexpected results.

Exact steps for others to reproduce the error

  • Open the animation tab.
  • Right-click in the dopesheet.
  • Right-click "Delete Keyframes"
  • Click "Assign Shortcut"
  • Set the hotkey to X.
  • Disable the existing dopesheet delete shortcut in the preferences window.
  • Press the newly created shortcut hotkey (X) in the dopesheet.
  • Observe that a confirmation prompt still appears, with a single option.
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.43 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** action.delete shortcuts show confirmation prompts in the dopesheet just like wm.call_menu, despite being a single action. As I never use the cleaning options that appear when pressing X to delete keyframes (wm.call_menu), I wanted to make a custom dopesheet shortcut for deleting keyframes (action.delete) that doesn't require an additional confirmation, (as is the case with the default wm.call_menu shortcut). So, I disabled the existing dopesheet delete shortcut and created a new one for action.delete. However, when using this new shortcut, a prompt still appears. I'm reporting this as a bug rather than a feature request because the behavior seems inconsistent with other single option shortcuts and yields unexpected results. **Exact steps for others to reproduce the error** - Open the animation tab. - Right-click in the dopesheet. - Right-click "Delete Keyframes" - Click "Assign Shortcut" - Set the hotkey to X. - Disable the existing dopesheet delete shortcut in the preferences window. - Press the newly created shortcut hotkey (X) in the dopesheet. - Observe that a confirmation prompt still appears, with a single option.
Author

Added subscriber: @OhiraKyou

Added subscriber: @OhiraKyou

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Germano Cavalcante self-assigned this 2019-10-01 15:53:34 +02:00

This does not seem to be a bug.
Some operators are invoked, others executed depending on the context.
Or this is due a property that has not been set (operator properties can be set in preferences).
Or this is not supported in the intended context.

This does not seem to be a bug. Some operators are invoked, others executed depending on the context. Or this is due a property that has not been set (operator properties can be set in preferences). Or this is not supported in the intended context.

Added subscriber: @zeauro

Added subscriber: @zeauro

That is not expected behavior.

this is due a property that has not been set (operator properties can be set in preferences).

Exactly, that is a lack.
If user takes time to change shortcut to have a direct access to deletion of keyframes to be fast, he does not want to be annoyed by a confirmation prompt.
There should be a property to disable in shortcut panel of operator.

That remark is valuable for any deletion in dopesheet or graph editor or 3D Viewport.

That is not expected behavior. > this is due a property that has not been set (operator properties can be set in preferences). Exactly, that is a lack. If user takes time to change shortcut to have a direct access to deletion of keyframes to be fast, he does not want to be annoyed by a confirmation prompt. There should be a property to disable in shortcut panel of operator. That remark is valuable for any deletion in dopesheet or graph editor or 3D Viewport.

Added subscriber: @NunoAlexandreConceicao

Added subscriber: @NunoAlexandreConceicao

Why this task got close as invalid?
This is probably one of the most annoying papercuts for Blender animators, there is no way to delete a keyframe without confirmation using a shortcut, even though manually deleting the selected keyframe using the right click menu works.
This should work the same way using the shortcut, its clearly a bug!

Why this task got close as invalid? This is probably one of the most annoying papercuts for Blender animators, there is no way to delete a keyframe without confirmation using a shortcut, even though manually deleting the selected keyframe using the right click menu works. This should work the same way using the shortcut, its clearly a bug!
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Just a note to myself that this indeed generates some urgency for users:

https://blender.community/c/rightclickselect/23gbbc/

Just a note to myself that this indeed generates some urgency for users: https://blender.community/c/rightclickselect/23gbbc/

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Archived' to: 'Needs Triage'

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz

I agree a "confirm" option in the hotkey entry would make all the difference in the world and its basically "use it at your own risk" to the user.

I agree a "confirm" option in the hotkey entry would make all the difference in the world and its basically "use it at your own risk" to the user.
Germano Cavalcante was unassigned by Philipp Oeser 2020-11-16 18:59:46 +01:00
Philipp Oeser self-assigned this 2020-11-16 18:59:46 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I'll check on this after release

I'll check on this after release

This issue was referenced by 290b6d7ef3

This issue was referenced by 290b6d7ef327d963084792b65f7d8c79810b5e1f

Added subscriber: @lorfran14

Added subscriber: @lorfran14

So after further evaluation the menu that X is showing isn't really a confirmation is a delete menu, what I think should be done instead is to keep those two options "clean keys" and "clean channels" on a "delete menu" that could be accessed via ALT X and leave Delete Keyframes alone so it can be deleted with just the hotkey pressed (x)

The thought process behind this is that cleaning channels and keyframes is rare to the point of being something that if you use at all, it happens once a day at the most, but inserting and deleting keyframes is an operation that happens constantly.

So after further evaluation the menu that X is showing isn't really a confirmation is a delete menu, what I think should be done instead is to keep those two options "clean keys" and "clean channels" on a "delete menu" that could be accessed via ALT X and leave Delete Keyframes alone so it can be deleted with just the hotkey pressed (x) The thought process behind this is that cleaning channels and keyframes is rare to the point of being something that if you use at all, it happens once a day at the most, but inserting and deleting keyframes is an operation that happens constantly.

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Years ago we had a discussion on the matter and we come up with pretty good compromises.
The point was for people like me and other who use keyboard shortcut intensively, we might end up, by mistake, hit the x-key and lose the important work without noticing. But the delete-key was the better option for deleting without warning. For further reading -> https://developer.blender.org/T57880

Years ago we had a discussion on the matter and we come up with pretty good compromises. The point was for people like me and other who use keyboard shortcut intensively, we might end up, by mistake, hit the x-key and lose the important work without noticing. But the delete-key was the better option for deleting without warning. For further reading -> https://developer.blender.org/T57880
Member

In #70316#1078245, @LucianoMunoz wrote:
So after further evaluation the menu that X is showing isn't really a confirmation is a delete menu, what I think should be done instead is to keep those two options "clean keys" and "clean channels" on a "delete menu" that could be accessed via ALT X and leave Delete Keyframes alone so it can be deleted with just the hotkey pressed (x)

The thought process behind this is that cleaning channels and keyframes is rare to the point of being something that if you use at all, it happens once a day at the most, but inserting and deleting keyframes is an operation that happens constantly.

Note the point here was that even if you used the delete operator outside of the menu, it would require a confirmation (this was addressed in D9651)
I have changed D9651 accordingly (put menu on {key Alt X}), for Industry Compatible keymap, I've put the menu on {key Alt + Del}

> In #70316#1078245, @LucianoMunoz wrote: > So after further evaluation the menu that X is showing isn't really a confirmation is a delete menu, what I think should be done instead is to keep those two options "clean keys" and "clean channels" on a "delete menu" that could be accessed via ALT X and leave Delete Keyframes alone so it can be deleted with just the hotkey pressed (x) > > The thought process behind this is that cleaning channels and keyframes is rare to the point of being something that if you use at all, it happens once a day at the most, but inserting and deleting keyframes is an operation that happens constantly. Note the point here was that even if you used the delete operator outside of the menu, it would require a confirmation (this was addressed in [D9651](https://archive.blender.org/developer/D9651)) I have changed [D9651](https://archive.blender.org/developer/D9651) accordingly (put menu on {key Alt X}), for Industry Compatible keymap, I've put the menu on {key Alt + Del}
Member

In #70316#1078255, @ErickNyanduKabongo wrote:
Years ago we had a discussion on the matter and we come up with pretty good compromises.
The point was for people like me and other who use keyboard shortcut intensively, we might end up, by mistake, hit the x-key and lose the important work without noticing. But the delete-key was the better option for deleting without warning. For further reading -> https://developer.blender.org/T57880

This was D9651 in its first iteration: {key X} for menu, {key Del} for immediate deletion, just as we do for objects.
Personally I would still vote for {key X} immediate ({key Del} is to far away on the keyboard), but I will leave this up to real artists :)

> In #70316#1078255, @ErickNyanduKabongo wrote: > Years ago we had a discussion on the matter and we come up with pretty good compromises. > The point was for people like me and other who use keyboard shortcut intensively, we might end up, by mistake, hit the x-key and lose the important work without noticing. But the delete-key was the better option for deleting without warning. For further reading -> https://developer.blender.org/T57880 This was [D9651](https://archive.blender.org/developer/D9651) in its first iteration: {key X} for menu, {key Del} for immediate deletion, just as we do for objects. Personally I would still vote for {key X} immediate ({key Del} is to far away on the keyboard), but I will leave this up to real artists :)

In #70316#1078261, @lichtwerk wrote:

In #70316#1078255, @ErickNyanduKabongo wrote:
Years ago we had a discussion on the matter and we come up with pretty good compromises.
The point was for people like me and other who use keyboard shortcut intensively, we might end up, by mistake, hit the x-key and lose the important work without noticing. But the delete-key was the better option for deleting without warning. For further reading -> https://developer.blender.org/T57880

This was D9651 in its first iteration: {key X} for menu, {key Del} for immediate deletion, just as we do for objects.
Personally I would still vote for {key X} immediate ({key Del} is to far away on the keyboard), but I will leave this up to real artists :)

The first problem is now consistency, and second the risk of losing your work. When hitting the delete-key we usually look at the keyboard and delete key is by itself compare to x-key.
This is really a problem why we have to debate over and over and over old decisions? This is pretty frustrating. There is already a decision. Hit X -> menu, Hit delete -> immediate deletion.

> In #70316#1078261, @lichtwerk wrote: >> In #70316#1078255, @ErickNyanduKabongo wrote: >> Years ago we had a discussion on the matter and we come up with pretty good compromises. >> The point was for people like me and other who use keyboard shortcut intensively, we might end up, by mistake, hit the x-key and lose the important work without noticing. But the delete-key was the better option for deleting without warning. For further reading -> https://developer.blender.org/T57880 > > This was [D9651](https://archive.blender.org/developer/D9651) in its first iteration: {key X} for menu, {key Del} for immediate deletion, just as we do for objects. > Personally I would still vote for {key X} immediate ({key Del} is to far away on the keyboard), but I will leave this up to real artists :) The first problem is now consistency, and second the risk of losing your work. When hitting the delete-key we usually look at the keyboard and delete key is by itself compare to x-key. This is really a problem why we have to debate over and over and over old decisions? This is pretty frustrating. There is already a decision. Hit X -> menu, Hit delete -> immediate deletion.
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

There is already a decision. Hit X -> menu, Hit delete -> immediate deletion.

I'd be happy to change this back in D9651, @LucianoMunoz, @dr.sybren : do you agree?

> There is already a decision. Hit X -> menu, Hit delete -> immediate deletion. I'd be happy to change this back in [D9651](https://archive.blender.org/developer/D9651), @LucianoMunoz, @dr.sybren : do you agree?
Member

Maybe I should just separate the operator change [adding the confirm property that can be set to False -- which we all agree upon afaict?] from the keymap change in D9651?
This way we have the minimal mandatory functionality in [this would make most power users happy already], and leave the "hard" part (deciding on keymap defaults) for another Diff?

Maybe I should just separate the operator change [adding the `confirm` property that can be set to False -- which we all agree upon afaict?] from the keymap change in [D9651](https://archive.blender.org/developer/D9651)? This way we have the minimal mandatory functionality in [this would make most power users happy already], and leave the "hard" part (deciding on keymap defaults) for another Diff?

In #70316#1078275, @lichtwerk wrote:

There is already a decision. Hit X -> menu, Hit delete -> immediate deletion.

I'd be happy to change this back in D9651, @LucianoMunoz, @dr.sybren : do you agree?

Yes, I think that's a good choice. It also will serve as an example for people who want {key X} to have no confirmation popup, as they can simply copy the keybinding.

> In #70316#1078275, @lichtwerk wrote: >> There is already a decision. Hit X -> menu, Hit delete -> immediate deletion. > > I'd be happy to change this back in [D9651](https://archive.blender.org/developer/D9651), @LucianoMunoz, @dr.sybren : do you agree? Yes, I think that's a good choice. It also will serve as an example for people who want {key X} to have no confirmation popup, as they can simply copy the keybinding.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70316
No description provided.